amk8976: Adding support for AKM8976 compass driver
Signed-off-by: Rebecca Schultz <rschultz@google.com>

i2c: akm8976: Add proper probe function + provide hardware information

Signed-off-by: Farmer Tseng <farmer_tseng@htc.com>
Signed-off-by: San Mehat <san@google.com>

akm8976: Fix for 2.6.32

Signed-off-by: Arve Hjønnevåg <arve@android.com>

--- a/drivers/i2c/chips/Kconfig
+++ b/drivers/i2c/chips/Kconfig
@@ -26,6 +26,12 @@ config SENSORS_TSL2550
 	  This driver can also be built as a module.  If so, the module
 	  will be called tsl2550.
 
+config SENSORS_AKM8976
+	tristate "AKM8976 Compass Driver"
+	depends on I2C
+	help
+	 AKM8976 Compass Driver implemented by HTC.
+
 config SENSORS_PCA963X
 	tristate "Philips PCA963X 4-bit I2C-bus LED"
 	depends on I2C && EXPERIMENTAL
