i2c: chips: Add driver for AKM8973 Compass device
Signed-off-by: Eric Olsen <eolsen@android.com>
Signed-off-by: Iliyan Malchev <malchev@google.com>

Clean up driver debug message from the logs

Change-Id: Id8524eee501c9a1644537454a59f9c7598e61dfe
Signed-off-by: Eric Olsen <eolsen@android.com>

[DRIVERS] i2c: akm8973:  Fix for orientation issue

Signed-off-by: Andy Chuang <andy_chuang@htc.com>
Signed-off-by: Eric Olsen <eolsen@android.com>

--- a/drivers/i2c/chips/Kconfig
+++ b/drivers/i2c/chips/Kconfig
@@ -32,6 +32,12 @@ config SENSORS_AKM8976
 	help
 	 AKM8976 Compass Driver implemented by HTC.
 
+config SENSORS_AKM8973
+	tristate "AKM8973 Compass Driver"
+	depends on I2C
+	help
+	 AKM8973 Compass Driver implemented by HTC.
+
 config SENSORS_PCA963X
 	tristate "Philips PCA963X 4-bit I2C-bus LED"
 	depends on I2C && EXPERIMENTAL
