[ARM] Add VMALLOC_RESERVE kconfig option.
Change-Id: I67949f84c38a6e3e85456d129055cbdb2c007f73
Signed-off-by: Arve Hjønnevåg <arve@android.com>

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -1140,6 +1140,13 @@ config HIGHPTE
 	depends on HIGHMEM
 	depends on !OUTER_CACHE
 
+config VMALLOC_RESERVE
+	hex "Reserved vmalloc space"
+	default 0x08000000
+	depends on MMU
+	help
+	  Reserved vmalloc space if not specified on the kernel commandline.
+
 source "mm/Kconfig"
 
 config LEDS
