--- a/arch/arm/configs/mahimahi_defconfig
+++ b/arch/arm/configs/mahimahi_defconfig
@@ -1175,6 +1175,7 @@ CONFIG_USB_ANDROID_ADB=y
 CONFIG_USB_ANDROID_MASS_STORAGE=y
 CONFIG_USB_ANDROID_DIAG=y
 CONFIG_USB_ANDROID_RNDIS=y
+CONFIG_USB_ANDROID_RNDIS_WCEIS=y
 # CONFIG_USB_CDC_COMPOSITE is not set
 
 #
