msm: audio: 7x30: Add platform driver for virtual snd devices
The driver provides support for virtual devices.
These devices are virtual devices to help routing decoder/encoder.
The driver registers with audio_dev_ctrl framework and hence gets
allocated a device number. This device number is used to do all
routing to the virtual device.

Change-Id: Iacd5cf63c36fcffca83c8413cb804b0d08497394
Signed-off-by: Asish Bhattacharya <asishb@qualcomm.com>
Signed-off-by: Rajesha Kini <rkini@qualcomm.com>

--- a/arch/arm/mach-msm/qdsp5v2/Makefile
+++ b/arch/arm/mach-msm/qdsp5v2/Makefile
@@ -7,4 +7,4 @@ obj-y += audio_lpa.o mp3_funcs.o pcm_funcs.o
 obj-y += audpreproc.o audio_pcm_in.o audio_aac_in.o audio_amrnb_in.o
 obj-y += audio_evrc_in.o audio_qcelp_in.o
 obj-y += adsp.o adsp_driver.o adsp_info.o
-obj-y += audio_acdb.o
+obj-y += audio_acdb.o snddev_virtual.o
