gpio: add pmic8901-mpp.c as a gpio driver for PM8901 MPP
MPP (Multi-Purpose Pin) can be configured for multiple purposes
on PM8901 chip. This is the list of supported configurations:
- digital input
- digital output
- digital bidirectional
- analog input
- analog input
- current sink
- test sink mode
- test output mode

When configured as digital input and/or output, an MPP pin works
exactly like a GPIO pin.

Change-Id: Ie595166700b454ddc98b0d7a7e9bbe3a1ea830ac
Signed-off-by: Willie Ruan <wruan@codeaurora.org>

--- a/drivers/gpio/Kconfig
+++ b/drivers/gpio/Kconfig
@@ -180,6 +180,16 @@ config GPIO_SX150X
 	  Say yes here to provide support for the Semtech SX150x I2C
 	  GPIO expanders.
 
+config MPP_PMIC8901
+	tristate "Qualcomm PMIC8901 MPP"
+	depends on GPIOLIB && PMIC8901
+	default y
+	help
+	  Say yes here to support GPIO functionality on Qualcomm's
+	  PM8901 chip for MPP(Multi-Purpose Pin) pins. These pins
+	  work like GPIO pins when configured as digital input and/or
+	  output signals.
+
 comment "PCI GPIO expanders:"
 
 config GPIO_BT8XX
