msm: Add SDIO Control Driver to support Control Plane over SDIO.
This driver contains SDIO Control Channel Driver & SDIO CMUX Driver.
SDIO Control Channel Driver implements Control Port interface to
user-space. SDIO CMUX Driver multiplexes control data from multiple
SDIO Control Ports onto the SDIO.

Change-Id: I25f1e9cf7d8afe969b045dd0331cec6256b603aa
Signed-off-by: Karthikeyan Ramasubramanian <kramasub@codeaurora.org>

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -666,6 +666,20 @@ config MSM_SMD_PKT
 
 	  If in doubt, say yes.
 
+config MSM_SDIO_CTL
+	bool "SDIO CTL Driver"
+	depends on MSM_SDIO_AL
+	default y
+	help
+	  Provides a binay SDIO muxed control port interface.
+
+config MSM_SDIO_CTL_DEBUG
+	bool "SDIO CTL DEBUG Enable"
+	depends on MSM_SDIO_CTL
+	default y
+	help
+	  Support for debugging the SDIO Control Driver
+
 config MSM_ONCRPCROUTER
 	depends on MSM_SMD
 	default y
