input: flip_switch: Add flip switch state detection driver
PMIC8058 based keypad used with MSM7x30 has flip switch connected
over PMIC8058 MPP pin. This switch when pressed towards left
is used for indication to enable left side QWERTY keypad and for
the right side it is used to indicate alpha-numeric keypad.

This driver doesn't load new keymap based on the status of the
flip switch, as this switch can be used for other usecases as well.
So, userspace application framework has to read the switch status
over input device node and load the new keymap using setkeycode and
getkeycode functionality of linux input framework.

CRs-Fixed: 211770
Change-Id: Iac921b83cf47e303e34359cb075c51c05904299c
Signed-off-by: Mohan Pallaka <mpallaka@qualcomm.com>

--- a/drivers/input/misc/Kconfig
+++ b/drivers/input/misc/Kconfig
@@ -358,4 +358,17 @@ config PMIC8058_OTHC
 
 	  To compile this driver as a module, choose M here: the
 	  module will be called pmic8058-othc.
+
+config INPUT_KP_FLIP_SWITCH
+	tristate "flip switch detection support"
+	default y
+	depends on PMIC8058 && ARCH_MSM7X30
+	help
+	  Say Y here if you want support for the flip switch detection.
+	  This driver can be used with Qualcomm MSM7x30 based development
+	  platforms which have flip switch as part of the PMIC8058 keypad.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called kp_flip_switch.
+
 endif
