msm: rpc: Add dog keepalive RPC client.
The dog keepalive RPC client registers for periodic
callback requests from remote server and replies to those
callback requests indicating that local processor state
is healthy.

Change-Id: Ia0d9cd421c912b44cbcf59582f79746783176813
Signed-off-by: Niranjana Vishwanathapura <nvishwan@codeaurora.org>

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -765,6 +765,13 @@ config MSM_RPCSERVER_WATCHDOG
 	help
 	  The dog_keepalive server handles watchdog events.
 
+config MSM_RPC_WATCHDOG
+	depends on MSM_ONCRPCROUTER
+	default n
+	bool "Watchdog RPC client"
+	help
+	  The dog_keepalive client module.
+
 config MSM_RPC_PING
 	depends on MSM_ONCRPCROUTER && DEBUG_FS
 	default m
