msm: 8x50a: Add board support for ST1.5
This is enough to boot up to userspace init and thus should be
sufficient to bring in any drivers such as keyboard, display,
etc.

Change-Id: I15bba47801d3cd448339539db68f37757f1ecb47
Signed-off-by: Stephen Boyd <sboyd@codeaurora.org>

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -204,6 +204,15 @@ config MACH_QSD8X50A_FFA
 	help
 	  Support for the Qualcomm QSD8x50A FFA eval board.
 
+config MACH_QSD8X50A_ST1_5
+	depends on ARCH_QSD8X50
+	depends on MSM_SOC_REV_A
+	depends on MSM_STACKED_MEMORY
+	default y
+	bool "QSD8x50A ST1.5"
+	help
+	  Support for the Qualcomm ST1.5.
+
 config MACH_MSM7X25_SURF
 	depends on ARCH_MSM7X25
 	depends on !MSM_STACKED_MEMORY
