msm: enable SMD/SMSM on 8x60
Enable SMD/SMSM related kernel config items,
add io descriptor for shared memory region, add device
msm_smd_device.

Change-Id: Iad97d8f58c4b56b388b328cab27fa9a19dd29f47
Signed-off-by: Niranjana Vishwanathapura <nvishwan@codeaurora.org>

--- a/arch/arm/configs/msm8660_defconfig
+++ b/arch/arm/configs/msm8660_defconfig
@@ -239,8 +239,28 @@ CONFIG_MSM7X00A_IDLE_SPIN_TIME=80000
 CONFIG_MSM_FIQ_SUPPORT=y
 # CONFIG_MSM_SERIAL_DEBUGGER is not set
 # CONFIG_MSM_PROC_COMM is not set
-# CONFIG_MSM_SMD is not set
-# CONFIG_MSM_RPC_PROC_COMM_TEST is not set
+CONFIG_MSM_SMD=y
+# CONFIG_HTC_PWRSINK is not set
+# CONFIG_MSM_SMD_PKG3 is not set
+CONFIG_MSM_SMD_PKG4=y
+CONFIG_MSM_SMD_DEBUG=y
+CONFIG_MSM_N_WAY_SMD=y
+CONFIG_MSM_N_WAY_SMSM=y
+CONFIG_MSM_SMD_TTY=y
+CONFIG_MSM_SMD_PKT=y
+# CONFIG_MSM_RESET_MODEM is not set
+# CONFIG_MSM_SMD_LOGGING is not set
+# CONFIG_MSM_SMD_NMEA is not set
+# CONFIG_MSM_SMD_QMI is not set
+# CONFIG_MSM_ONCRPCROUTER is not set
+# CONFIG_MSM_ONCRPCROUTER_DEBUG is not set
+# CONFIG_MSM_RPC_LOOPBACK_XPRT is not set
+# CONFIG_MSM_RPC_OEM_RAPI is not set
+# CONFIG_MSM_RPC_PING is not set
+# CONFIG_MSM_RPCSERVER_TIME_REMOTE is not set
+# CONFIG_MSM_RPCSERVER_WATCHDOG is not set
+# CONFIG_MSM_RPCSERVER_HANDSET is not set
+# CONFIG_MSM_RMT_STORAGE_SERVER is not set
 # CONFIG_MSM_HW3D is not set
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
 CONFIG_MSM_DMA_TEST=y
