msm: audio: 7x30: Create MI2S sound device driver.
This driver sets up an audio hardware path which receives and
transmits digital audio signal from and to external audio devices
Currently, this driver sets hardware path for trasmitting stereo
audio to external HDMI transmitter. This driver also sets up audio
path for receiving stereo audio from an external FM receiver.

Change-Id: I61888ff44783b39c95aeabb8d71ba9726d7a0cc0
Signed-off-by: Patrick Lai <plai@codeaurora.org>

--- a/arch/arm/mach-msm/qdsp5v2/Makefile
+++ b/arch/arm/mach-msm/qdsp5v2/Makefile
@@ -9,3 +9,4 @@ obj-y += audio_evrc_in.o audio_qcelp_in.o
 obj-y += adsp.o adsp_driver.o adsp_info.o
 obj-y += audio_acdb.o snddev_virtual.o
 obj-y += audio_fm.o
+obj-y += snddev_mi2s.o
