defconfig: Add options from msm7630-perf to msm8655-sr defconfig
All new options are left unset.

Change-Id: I771669ca3337b3c60d483d5ae045cce08ace1439
Signed-off-by: Ashish Singhal <ashishs@codeaurora.org>

--- a/arch/arm/configs/msm8655-sr_defconfig
+++ b/arch/arm/configs/msm8655-sr_defconfig
@@ -257,6 +257,7 @@ CONFIG_MSM_SMD_NMEA=y
 CONFIG_MSM_SMD_TTY=y
 CONFIG_MSM_SMD_QMI=y
 CONFIG_MSM_SMD_CTL=y
+# CONFIG_MSM_SMD_PKT is not set
 CONFIG_MSM_ONCRPCROUTER=y
 CONFIG_MSM_ONCRPCROUTER_DEBUG=y
 # CONFIG_MSM_RPC_LOOPBACK_XPRT is not set
@@ -283,6 +284,7 @@ CONFIG_AUDIO_ENHANCED_AAC_PLUS=y
 CONFIG_SURF_FFA_GPIO_KEYPAD=y
 # CONFIG_CLOCK_BASED_SLEEP_LIMIT is not set
 CONFIG_MSM_SLEEP_TIME_OVERRIDE=y
+# CONFIG_MSM_MEMORY_LOW_POWER_MODE is not set
 CONFIG_MSM_PM_TIMEOUT_HALT=y
 # CONFIG_MSM_PM_TIMEOUT_RESET_MODEM is not set
 # CONFIG_MSM_PM_TIMEOUT_RESET_CHIP is not set
@@ -713,6 +715,7 @@ CONFIG_APANIC_PLABEL="kpanic"
 CONFIG_PMIC8058_PWM=y
 # CONFIG_HAPTIC_ISA1200 is not set
 # CONFIG_PMIC8058_VIBRATOR is not set
+# CONFIG_PMIC8058_NFC is not set
 # CONFIG_C2PORT is not set
 
 #
@@ -1321,6 +1324,9 @@ CONFIG_BACKLIGHT_CLASS_DEVICE=y
 # CONFIG_VGA_CONSOLE is not set
 CONFIG_DUMMY_CONSOLE=y
 CONFIG_FRAMEBUFFER_CONSOLE=y
+# CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY is not set
+# CONFIG_FRAMEBUFFER_CONSOLE_ROTATION is not set
+# CONFIG_FONTS is not set
 # CONFIG_LOGO is not set
 CONFIG_SOUND=y
 # CONFIG_SOUND_OSS_CORE is not set
