msm: Add configs for 8x55 SVLTE boards
Change-Id: I5ddc1af78847af59eee07f3cd6f137f5861afe63
Signed-off-by: Sahitya Tummala <stummala@qualcomm.com>

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -236,6 +236,22 @@ config MACH_MSM8X55_FFA
        help
          Support for the Qualcomm MSM8x55 FFA eval board.
 
+config MACH_MSM8X55_SVLTE_FFA
+       depends on ARCH_MSM7X30
+       depends on !MSM_STACKED_MEMORY
+       default y
+       bool "MSM8X55 SVLTE FFA"
+       help
+         Support for the Qualcomm MSM8x55 SVLTE FFA eval board.
+
+config MACH_MSM8X55_SVLTE_SURF
+       depends on ARCH_MSM7X30
+       depends on !MSM_STACKED_MEMORY
+       default y
+       bool "MSM8X55 SVLTE SURF"
+       help
+         Support for the Qualcomm MSM8x55 SVLTE SURF eval board.
+
 config MACH_MSM8X60_RUMI3
 	depends on ARCH_MSM8X60
 	default n
