defconfig: Turn on CONFIG_HOLES_IN_ZONE on 8x60
Change-Id: Ib4d1080bd03347e090a6e965d95c5635701c4869
Signed-off-by: Jeff Ohlstein <johlstei@codeaurora.org>

--- a/arch/arm/configs/msm8660_defconfig
+++ b/arch/arm/configs/msm8660_defconfig
@@ -334,7 +334,7 @@ CONFIG_HZ=100
 # CONFIG_THUMB2_KERNEL is not set
 CONFIG_AEABI=y
 CONFIG_OABI_COMPAT=y
-# CONFIG_HOLES_IN_ZONE is not set
+CONFIG_HOLES_IN_ZONE=y
 # CONFIG_ARCH_SPARSEMEM_DEFAULT is not set
 # CONFIG_ARCH_SELECT_MEMORY_MODEL is not set
 # CONFIG_HIGHMEM is not set
