defconfig: 8x55 SVLTE, SDIO Abstraction and SDIO for RMNET
Change-Id: I76c204ac58f95f9fb8b9fbd776e0ccea507a4cd6
Signed-off-by: Ashish Singhal <ashishs@codeaurora.org>

--- a/arch/arm/configs/msm8655-sr_defconfig
+++ b/arch/arm/configs/msm8655-sr_defconfig
@@ -205,6 +205,8 @@ CONFIG_MACH_MSM7X30_FFA=y
 CONFIG_MACH_MSM7X30_FLUID=y
 CONFIG_MACH_MSM8X55_SURF=y
 CONFIG_MACH_MSM8X55_FFA=y
+CONFIG_MACH_MSM8X55_SVLTE_FFA=y
+CONFIG_MACH_MSM8X55_SVLTE_SURF=y
 # CONFIG_MSM_STACKED_MEMORY is not set
 CONFIG_PHYS_OFFSET=0x00200000
 CONFIG_MSM_AMSS_VERSION=6225
@@ -249,6 +251,7 @@ CONFIG_MSM_RPC_SDIO_XPRT=y
 CONFIG_MSM_RPC_SDIO_DEBUG=y
 CONFIG_MSM_SMD_DEBUG=y
 CONFIG_MSM_SDIO_AL=y
+# CONFIG_MSM_SDIO_AL_TEST is not set
 CONFIG_MSM_N_WAY_SMD=y
 CONFIG_MSM_N_WAY_SMSM=y
 CONFIG_MSM_RESET_MODEM=m
@@ -256,8 +259,9 @@ CONFIG_MSM_SMD_LOGGING=y
 CONFIG_MSM_SMD_NMEA=y
 CONFIG_MSM_SMD_TTY=y
 CONFIG_MSM_SMD_QMI=y
-CONFIG_MSM_SMD_CTL=y
 # CONFIG_MSM_SMD_PKT is not set
+CONFIG_MSM_SDIO_CTL=y
+CONFIG_MSM_SDIO_CTL_DEBUG=y
 CONFIG_MSM_ONCRPCROUTER=y
 CONFIG_MSM_ONCRPCROUTER_DEBUG=y
 # CONFIG_MSM_RPC_LOOPBACK_XPRT is not set
@@ -853,6 +857,7 @@ CONFIG_SLHC=y
 CONFIG_SLIP_MODE_SLIP6=y
 # CONFIG_NETCONSOLE is not set
 CONFIG_MSM_RMNET=y
+CONFIG_MSM_RMNET_SDIO=y
 # CONFIG_MSM_RMNET_DEBUG is not set
 # CONFIG_NETPOLL is not set
 # CONFIG_NET_POLL_CONTROLLER is not set
@@ -1272,7 +1277,7 @@ CONFIG_FB_MSM_MDP40=y
 CONFIG_FB_MSM_MDDI=y
 CONFIG_FB_MSM_LCDC=y
 CONFIG_FB_MSM_OVERLAY=y
-CONFIG_FB_MSM_DTV=y
+# CONFIG_FB_MSM_DTV is not set
 # CONFIG_FB_MSM_EXTMDDI is not set
 # CONFIG_FB_MSM_TVOUT is not set
 # CONFIG_FB_MSM_MDDI_TOSHIBA_COMMON is not set
@@ -1327,6 +1332,8 @@ CONFIG_FRAMEBUFFER_CONSOLE=y
 # CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY is not set
 # CONFIG_FRAMEBUFFER_CONSOLE_ROTATION is not set
 # CONFIG_FONTS is not set
+CONFIG_FONT_8x8=y
+CONFIG_FONT_8x16=y
 # CONFIG_LOGO is not set
 CONFIG_SOUND=y
 # CONFIG_SOUND_OSS_CORE is not set
@@ -1591,7 +1598,6 @@ CONFIG_MMC_BLOCK=y
 # CONFIG_MMC_ATMELMCI is not set
 # CONFIG_MMC_SPI is not set
 CONFIG_MMC_MSM=y
-# CONFIG_MMC_MSM7X00A_RESUME_IN_WQ is not set
 CONFIG_MMC_MSM_SDIO_SUPPORT=y
 CONFIG_MMC_MSM_CARD_HW_DETECTION=y
 CONFIG_MMC_MSM_SDC1_SUPPORT=y
