defconfig: Add flip switch state, SMD_PKT and GPIOlib
Configs for GPIOLIB are not set as of now.

Change-Id: I88ef0d3619bf738f5e79bc2354f3dd5bee99eb46
Signed-off-by: Ashish Singhal <ashishs@codeaurora.org>

--- a/arch/arm/configs/msm8655-sr_defconfig
+++ b/arch/arm/configs/msm8655-sr_defconfig
@@ -259,7 +259,7 @@ CONFIG_MSM_SMD_LOGGING=y
 CONFIG_MSM_SMD_NMEA=y
 CONFIG_MSM_SMD_TTY=y
 CONFIG_MSM_SMD_QMI=y
-# CONFIG_MSM_SMD_PKT is not set
+CONFIG_MSM_SMD_PKT=y
 CONFIG_MSM_SDIO_CTL=y
 CONFIG_MSM_SDIO_CTL_DEBUG=y
 CONFIG_MSM_ONCRPCROUTER=y
@@ -940,6 +940,7 @@ CONFIG_INPUT_GPIO=y
 # CONFIG_INPUT_CAPELLA_CM3602 is not set
 # CONFIG_PMIC8058_PWRKEY is not set
 # CONFIG_PMIC8058_OTHC is not set
+CONFIG_INPUT_KP_FLIP_SWITCH=y
 
 #
 # Hardware I/O ports
@@ -1061,6 +1062,8 @@ CONFIG_SPI_MASTER=y
 # PPS support
 #
 # CONFIG_PPS is not set
+# CONFIG_ARCH_WANT_OPTIONAL_GPIOLIB is not set
+# CONFIG_GPIOLIB is not set
 # CONFIG_W1 is not set
 CONFIG_POWER_SUPPLY=y
 # CONFIG_POWER_SUPPLY_DEBUG is not set
