defconfig: automatic update
Change-Id: I7d815cd313b6df52885a023b499d9407d0cfcf92
Signed-off-by: Asish Bhattacharya <asishb@qualcomm.com>

--- a/arch/arm/configs/msm8655-sr_defconfig
+++ b/arch/arm/configs/msm8655-sr_defconfig
@@ -1062,7 +1062,7 @@ CONFIG_SPI_MASTER=y
 # PPS support
 #
 # CONFIG_PPS is not set
-# CONFIG_ARCH_WANT_OPTIONAL_GPIOLIB is not set
+CONFIG_ARCH_WANT_OPTIONAL_GPIOLIB=y
 # CONFIG_GPIOLIB is not set
 # CONFIG_W1 is not set
 CONFIG_POWER_SUPPLY=y
