--- a/arch/arm/configs/msm7630_defconfig
+++ b/arch/arm/configs/msm7630_defconfig
@@ -205,6 +205,8 @@ CONFIG_MACH_MSM7X30_FFA=y
 CONFIG_MACH_MSM7X30_FLUID=y
 CONFIG_MACH_MSM8X55_SURF=y
 CONFIG_MACH_MSM8X55_FFA=y
+CONFIG_MACH_MSM8X55_SVLTE_FFA=y
+CONFIG_MACH_MSM8X55_SVLTE_SURF=y
 # CONFIG_MSM_STACKED_MEMORY is not set
 CONFIG_PHYS_OFFSET=0x00200000
 CONFIG_MSM_AMSS_VERSION=6225
@@ -249,6 +251,7 @@ CONFIG_MSM_RPC_SDIO_XPRT=y
 CONFIG_MSM_RPC_SDIO_DEBUG=y
 CONFIG_MSM_SMD_DEBUG=y
 CONFIG_MSM_SDIO_AL=y
+# CONFIG_MSM_SDIO_AL_TEST is not set
 CONFIG_MSM_N_WAY_SMD=y
 CONFIG_MSM_N_WAY_SMSM=y
 CONFIG_MSM_RESET_MODEM=m
@@ -256,7 +259,9 @@ CONFIG_MSM_SMD_LOGGING=y
 CONFIG_MSM_SMD_NMEA=y
 CONFIG_MSM_SMD_TTY=y
 CONFIG_MSM_SMD_QMI=y
-CONFIG_MSM_SMD_CTL=y
+CONFIG_MSM_SMD_PKT=y
+CONFIG_MSM_SDIO_CTL=y
+CONFIG_MSM_SDIO_CTL_DEBUG=y
 CONFIG_MSM_ONCRPCROUTER=y
 CONFIG_MSM_ONCRPCROUTER_DEBUG=y
 # CONFIG_MSM_RPC_LOOPBACK_XPRT is not set
@@ -283,6 +288,7 @@ CONFIG_AUDIO_ENHANCED_AAC_PLUS=y
 CONFIG_SURF_FFA_GPIO_KEYPAD=y
 # CONFIG_CLOCK_BASED_SLEEP_LIMIT is not set
 CONFIG_MSM_SLEEP_TIME_OVERRIDE=y
+# CONFIG_MSM_MEMORY_LOW_POWER_MODE is not set
 CONFIG_MSM_PM_TIMEOUT_HALT=y
 # CONFIG_MSM_PM_TIMEOUT_RESET_MODEM is not set
 # CONFIG_MSM_PM_TIMEOUT_RESET_CHIP is not set
@@ -713,6 +719,7 @@ CONFIG_APANIC_PLABEL="kpanic"
 CONFIG_PMIC8058_PWM=y
 # CONFIG_HAPTIC_ISA1200 is not set
 # CONFIG_PMIC8058_VIBRATOR is not set
+CONFIG_PMIC8058_NFC=y
 # CONFIG_C2PORT is not set
 
 #
@@ -850,6 +857,7 @@ CONFIG_SLHC=y
 CONFIG_SLIP_MODE_SLIP6=y
 # CONFIG_NETCONSOLE is not set
 CONFIG_MSM_RMNET=y
+CONFIG_MSM_RMNET_SDIO=y
 # CONFIG_MSM_RMNET_DEBUG is not set
 # CONFIG_NETPOLL is not set
 # CONFIG_NET_POLL_CONTROLLER is not set
@@ -932,6 +940,7 @@ CONFIG_INPUT_GPIO=y
 # CONFIG_INPUT_CAPELLA_CM3602 is not set
 # CONFIG_PMIC8058_PWRKEY is not set
 # CONFIG_PMIC8058_OTHC is not set
+CONFIG_INPUT_KP_FLIP_SWITCH=y
 
 #
 # Hardware I/O ports
@@ -1052,6 +1061,8 @@ CONFIG_SPI_MASTER=y
 # PPS support
 #
 # CONFIG_PPS is not set
+CONFIG_ARCH_WANT_OPTIONAL_GPIOLIB=y
+# CONFIG_GPIOLIB is not set
 # CONFIG_W1 is not set
 CONFIG_POWER_SUPPLY=y
 # CONFIG_POWER_SUPPLY_DEBUG is not set
@@ -1461,7 +1472,6 @@ CONFIG_MMC_BLOCK=y
 # CONFIG_MMC_ATMELMCI is not set
 # CONFIG_MMC_SPI is not set
 CONFIG_MMC_MSM=y
-# CONFIG_MMC_MSM7X00A_RESUME_IN_WQ is not set
 CONFIG_MMC_MSM_SDIO_SUPPORT=y
 CONFIG_MMC_MSM_CARD_HW_DETECTION=y
 CONFIG_MMC_MSM_SDC1_SUPPORT=y
