--- a/arch/arm/configs/msm8660_defconfig
+++ b/arch/arm/configs/msm8660_defconfig
@@ -236,37 +236,30 @@ CONFIG_MSM7X00A_IDLE_SPIN_TIME=80000
 # CONFIG_MSM_IDLE_STATS is not set
 # CONFIG_MSM_JTAG_V7 is not set
 # CONFIG_HTC_HEADSET is not set
+# CONFIG_HTC_PWRSINK is not set
 CONFIG_MSM_FIQ_SUPPORT=y
 # CONFIG_MSM_SERIAL_DEBUGGER is not set
 # CONFIG_MSM_PROC_COMM is not set
 CONFIG_MSM_SMD=y
-# CONFIG_HTC_PWRSINK is not set
 # CONFIG_MSM_SMD_PKG3 is not set
 CONFIG_MSM_SMD_PKG4=y
 CONFIG_MSM_SMD_DEBUG=y
 CONFIG_MSM_N_WAY_SMD=y
 CONFIG_MSM_N_WAY_SMSM=y
-CONFIG_MSM_SMD_TTY=y
-CONFIG_MSM_SMD_PKT=y
 # CONFIG_MSM_RESET_MODEM is not set
 # CONFIG_MSM_SMD_LOGGING is not set
 # CONFIG_MSM_SMD_NMEA is not set
+CONFIG_MSM_SMD_TTY=y
 # CONFIG_MSM_SMD_QMI is not set
+CONFIG_MSM_SMD_PKT=y
 # CONFIG_MSM_ONCRPCROUTER is not set
-# CONFIG_MSM_ONCRPCROUTER_DEBUG is not set
-# CONFIG_MSM_RPC_LOOPBACK_XPRT is not set
-# CONFIG_MSM_RPC_OEM_RAPI is not set
-# CONFIG_MSM_RPC_PING is not set
-# CONFIG_MSM_RPCSERVER_TIME_REMOTE is not set
-# CONFIG_MSM_RPCSERVER_WATCHDOG is not set
-# CONFIG_MSM_RPCSERVER_HANDSET is not set
-# CONFIG_MSM_RMT_STORAGE_SERVER is not set
 # CONFIG_MSM_HW3D is not set
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
 CONFIG_MSM_DMA_TEST=y
 # CONFIG_WIFI_CONTROL_FUNC is not set
 # CONFIG_CLOCK_BASED_SLEEP_LIMIT is not set
 # CONFIG_MSM_SLEEP_TIME_OVERRIDE is not set
+# CONFIG_MSM_MEMORY_LOW_POWER_MODE is not set
 CONFIG_MSM_PM_TIMEOUT_HALT=y
 # CONFIG_MSM_PM_TIMEOUT_RESET_MODEM is not set
 # CONFIG_MSM_PM_TIMEOUT_RESET_CHIP is not set
@@ -519,6 +512,7 @@ CONFIG_APANIC_PLABEL="kpanic"
 CONFIG_PMIC8058_PWM=y
 # CONFIG_HAPTIC_ISA1200 is not set
 # CONFIG_PMIC8058_VIBRATOR is not set
+CONFIG_PMIC8058_NFC=y
 # CONFIG_C2PORT is not set
 
 #
@@ -765,6 +759,7 @@ CONFIG_I2C_SSBI=y
 # PPS support
 #
 # CONFIG_PPS is not set
+CONFIG_ARCH_WANT_OPTIONAL_GPIOLIB=y
 CONFIG_ARCH_REQUIRE_GPIOLIB=y
 CONFIG_GPIOLIB=y
 # CONFIG_DEBUG_GPIO is not set
@@ -888,6 +883,7 @@ CONFIG_MFD_CORE=y
 # CONFIG_HTC_PASIC3 is not set
 # CONFIG_TPS65010 is not set
 CONFIG_PMIC8058=y
+CONFIG_PMIC8901=y
 # CONFIG_TWL4030_CORE is not set
 # CONFIG_MFD_TMIO is not set
 # CONFIG_MFD_TC6393XB is not set
@@ -1018,7 +1014,6 @@ CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_MMC_AT91 is not set
 # CONFIG_MMC_ATMELMCI is not set
 CONFIG_MMC_MSM=y
-# CONFIG_MMC_MSM7X00A_RESUME_IN_WQ is not set
 CONFIG_MMC_MSM_SDIO_SUPPORT=y
 # CONFIG_MMC_MSM_CARD_HW_DETECTION is not set
 CONFIG_MMC_MSM_SDC1_SUPPORT=y
