--- a/arch/arm/configs/qsd8650_defconfig
+++ b/arch/arm/configs/qsd8650_defconfig
@@ -254,7 +254,7 @@ CONFIG_MSM_SMD_LOGGING=y
 CONFIG_MSM_SMD_NMEA=y
 CONFIG_MSM_SMD_TTY=y
 CONFIG_MSM_SMD_QMI=y
-CONFIG_MSM_SMD_CTL=y
+CONFIG_MSM_SMD_PKT=y
 CONFIG_MSM_ONCRPCROUTER=y
 CONFIG_MSM_ONCRPCROUTER_DEBUG=y
 # CONFIG_MSM_RPC_LOOPBACK_XPRT is not set
@@ -278,6 +278,7 @@ CONFIG_MSM_DMA_TEST=m
 CONFIG_SURF_FFA_GPIO_KEYPAD=y
 # CONFIG_CLOCK_BASED_SLEEP_LIMIT is not set
 CONFIG_MSM_SLEEP_TIME_OVERRIDE=y
+# CONFIG_MSM_MEMORY_LOW_POWER_MODE is not set
 CONFIG_MSM_PM_TIMEOUT_HALT=y
 # CONFIG_MSM_PM_TIMEOUT_RESET_MODEM is not set
 # CONFIG_MSM_PM_TIMEOUT_RESET_CHIP is not set
@@ -988,6 +989,8 @@ CONFIG_SPI_SPIDEV=m
 # PPS support
 #
 # CONFIG_PPS is not set
+CONFIG_ARCH_WANT_OPTIONAL_GPIOLIB=y
+# CONFIG_GPIOLIB is not set
 # CONFIG_W1 is not set
 CONFIG_POWER_SUPPLY=y
 # CONFIG_POWER_SUPPLY_DEBUG is not set
@@ -1391,7 +1394,6 @@ CONFIG_MMC_BLOCK=y
 # CONFIG_MMC_ATMELMCI is not set
 # CONFIG_MMC_SPI is not set
 CONFIG_MMC_MSM=y
-# CONFIG_MMC_MSM7X00A_RESUME_IN_WQ is not set
 CONFIG_MMC_MSM_SDIO_SUPPORT=y
 # CONFIG_MMC_MSM_CARD_HW_DETECTION is not set
 CONFIG_MMC_MSM_SDC1_SUPPORT=y
