defconfig: Enable remote storage RPC client for 7x30 and 7x27
Change-Id: I065d1ac8ab050beb262b5938301850a34327601d
Signed-off-by: Sahitya Tummala <stummala@qualcomm.com>

--- a/arch/arm/configs/msm7627-perf_defconfig
+++ b/arch/arm/configs/msm7627-perf_defconfig
@@ -260,7 +260,8 @@ CONFIG_MSM_RPC_PING=y
 CONFIG_MSM_RPC_PROC_COMM_TEST=y
 CONFIG_MSM_RPC_OEM_RAPI=y
 CONFIG_MSM_RPCSERVER_HANDSET=y
-# CONFIG_MSM_RMT_STORAGE_SERVER is not set
+CONFIG_MSM_RMT_STORAGE_CLIENT=y
+# CONFIG_MSM_RMT_STORAGE_CLIENT_STATS is not set
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_MSM_ADSP=y
