--- a/arch/arm/configs/msm7627_defconfig
+++ b/arch/arm/configs/msm7627_defconfig
@@ -260,7 +260,8 @@ CONFIG_MSM_RPC_PING=y
 CONFIG_MSM_RPC_PROC_COMM_TEST=y
 CONFIG_MSM_RPC_OEM_RAPI=y
 CONFIG_MSM_RPCSERVER_HANDSET=y
-# CONFIG_MSM_RMT_STORAGE_SERVER is not set
+CONFIG_MSM_RMT_STORAGE_CLIENT=y
+# CONFIG_MSM_RMT_STORAGE_CLIENT_STATS is not set
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_MSM_ADSP=y
