msm: kgsl: add a Kconfig option to disable the 2D core
Change-Id: I07430c4ff4fd675c944c9ff3d025183ed59a7bbe
Signed-off-by: Jeremy Gebben <jgebben@codeaurora.org>

--- a/drivers/gpu/msm/Kconfig
+++ b/drivers/gpu/msm/Kconfig
@@ -8,6 +8,11 @@ config MSM_KGSL
 	  3D graphics driver. Required to use hardware accelerated
 	  OpenGL ES 2.0 and 1.1.
 
+config MSM_KGSL_2D
+	bool "Enable the 2D core. Required for OpenVG"
+	default n
+	depends on MSM_KGSL && !ARCH_MSM7X27
+
 config MSM_KGSL_DRM
 	bool "Build a DRM interface for the MSM_KGSL driver"
 	depends on MSM_KGSL && DRM
