msm: defconfig: Enable ST1.5 display, Quanta keypad, YAFFS
Disable HIGHMEM since it's known to cause issues with the nand
driver used by yaffs.

Change-Id: I5eb5d563db318c2a3117b84f4db16abec28fd8a4
Signed-off-by: Stephen Boyd <sboyd@codeaurora.org>

--- a/arch/arm/configs/qsd8650a_defconfig
+++ b/arch/arm/configs/qsd8650a_defconfig
@@ -342,8 +342,7 @@ CONFIG_OABI_COMPAT=y
 # CONFIG_HOLES_IN_ZONE is not set
 # CONFIG_ARCH_SPARSEMEM_DEFAULT is not set
 # CONFIG_ARCH_SELECT_MEMORY_MODEL is not set
-CONFIG_HIGHMEM=y
-# CONFIG_HIGHPTE is not set
+# CONFIG_HIGHMEM is not set
 CONFIG_VMALLOC_RESERVE=0x08000000
 CONFIG_SELECT_MEMORY_MODEL=y
 CONFIG_FLATMEM_MANUAL=y
@@ -355,7 +354,6 @@ CONFIG_PAGEFLAGS_EXTENDED=y
 CONFIG_SPLIT_PTLOCK_CPUS=4
 # CONFIG_PHYS_ADDR_T_64BIT is not set
 CONFIG_ZONE_DMA_FLAG=0
-CONFIG_BOUNCE=y
 CONFIG_VIRT_TO_BUS=y
 CONFIG_HAVE_MLOCK=y
 CONFIG_HAVE_MLOCKED_PAGE_BIT=y
@@ -864,6 +862,7 @@ CONFIG_INPUT_KEYBOARD=y
 # CONFIG_KEYBOARD_STOWAWAY is not set
 # CONFIG_KEYBOARD_SUNKBD is not set
 # CONFIG_KEYBOARD_XTKBD is not set
+CONFIG_KEYBOARD_QCIKBD=y
 # CONFIG_KEYBOARD_I2C_MSM is not set
 CONFIG_INPUT_MOUSE=y
 # CONFIG_MOUSE_PS2 is not set
@@ -1087,16 +1086,16 @@ CONFIG_FB_MSM_MDP31=y
 # CONFIG_FB_MSM_MDP40 is not set
 # CONFIG_FB_MSM_EBI2 is not set
 # CONFIG_FB_MSM_MDDI is not set
-# CONFIG_FB_MSM_LCDC is not set
+CONFIG_FB_MSM_LCDC=y
 # CONFIG_FB_MSM_EXTMDDI is not set
 # CONFIG_FB_MSM_TVOUT is not set
 # CONFIG_FB_MSM_MDDI_TOSHIBA_COMMON is not set
 # CONFIG_FB_MSM_MDDI_TOSHIBA_COMMON_VGA is not set
 # CONFIG_FB_MSM_MDDI_ORISE is not set
 # CONFIG_FB_MSM_MDDI_AUTO_DETECT is not set
-# CONFIG_FB_MSM_LCDC_PANEL is not set
-# CONFIG_FB_MSM_LCDC_ST15_WXGA is not set
-# CONFIG_FB_MSM_LCDC_ST15_PANEL is not set
+CONFIG_FB_MSM_LCDC_PANEL=y
+CONFIG_FB_MSM_LCDC_ST15_WXGA=y
+CONFIG_FB_MSM_LCDC_ST15_PANEL=y
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA is not set
 # CONFIG_FB_MSM_LCDC_SAMSUNG_WSVGA is not set
 # CONFIG_FB_MSM_LCDC_GORDON_VGA is not set
@@ -1513,7 +1512,17 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_BEFS_FS is not set
 # CONFIG_BFS_FS is not set
 # CONFIG_EFS_FS is not set
-# CONFIG_YAFFS_FS is not set
+CONFIG_YAFFS_FS=y
+CONFIG_YAFFS_YAFFS1=y
+# CONFIG_YAFFS_9BYTE_TAGS is not set
+# CONFIG_YAFFS_DOES_ECC is not set
+CONFIG_YAFFS_YAFFS2=y
+CONFIG_YAFFS_AUTO_YAFFS2=y
+# CONFIG_YAFFS_DISABLE_LAZY_LOAD is not set
+# CONFIG_YAFFS_DISABLE_WIDE_TNODES is not set
+# CONFIG_YAFFS_ALWAYS_CHECK_CHUNK_ERASED is not set
+CONFIG_YAFFS_SHORT_NAMES_IN_RAM=y
+# CONFIG_YAFFS_EMPTY_LOST_AND_FOUND is not set
 # CONFIG_JFFS2_FS is not set
 # CONFIG_CRAMFS is not set
 # CONFIG_SQUASHFS is not set
@@ -1645,7 +1654,6 @@ CONFIG_DEBUG_SPINLOCK_SLEEP=y
 # CONFIG_DEBUG_LOCKING_API_SELFTESTS is not set
 CONFIG_STACKTRACE=y
 # CONFIG_DEBUG_KOBJECT is not set
-# CONFIG_DEBUG_HIGHMEM is not set
 CONFIG_DEBUG_BUGVERBOSE=y
 CONFIG_DEBUG_INFO=y
 # CONFIG_DEBUG_VM is not set
