--- a/drivers/i2c/busses/Kconfig
+++ b/drivers/i2c/busses/Kconfig
@@ -431,15 +431,15 @@ config I2C_MPC
 
 config I2C_MSM
 	tristate "MSM"
-	depends on I2C && ARCH_MSM
+	depends on I2C && (ARCH_MSM || ARCH_QSD)
 	default y
 	help
 	  If you say yes to this option, support will be included for the
-	  built-in I2C interface on the MSM7X00A family processors.
+	  built-in I2C interface on the MSM or QSD family processors.
 
 config I2C_QUP
 	tristate "I2C_QUP"
-	depends on I2C && (ARCH_MSM7X30 || ARCH_MSM8X60)
+	depends on I2C && (ARCH_MSM7X30 || ARCH_MSM8X60 || (ARCH_QSD8X50 && MSM_SOC_REV_A))
 	default y
 	help
 	  If you say yes to this option, support will be included for the
