defconfig: Enable USB RNDIS function
CRs-Fixed: 241453
Change-Id: I4f1940cabc02b11eb27662819814ccb2164e7023
Signed-off-by: Pavankumar Kondeti <pkondeti@qualcomm.com>

--- a/arch/arm/configs/qsd8650_defconfig
+++ b/arch/arm/configs/qsd8650_defconfig
@@ -1359,7 +1359,7 @@ CONFIG_USB_GADGET_DUALSPEED=y
 CONFIG_USB_ANDROID=y
 CONFIG_USB_ANDROID_DIAG=y
 CONFIG_USB_ANDROID_CDC_ECM=y
-# CONFIG_USB_ANDROID_RNDIS is not set
+CONFIG_USB_ANDROID_RNDIS=y
 CONFIG_USB_ANDROID_RMNET=y
 CONFIG_RMNET_SMD_CTL_CHANNEL="DATA7_CNTL"
 CONFIG_RMNET_SMD_DATA_CHANNEL="DATA7"
