msm_fb: display: Add FB_MSM_OVERLAY dependency
Add FB_MSM_OVERLAY dependency to FB_MSM_HDMI_ADV7520_PANEL
to fix compiler error when FB_MSM_OVERLAY is not defined.

CRs-fixed: 240734
Change-Id: I948b2b198f69ada3dfb2eb4903363230a48935aa
Signed-off-by: Kuogee Hsieh <khsieh@codeaurora.org>

--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -2414,7 +2414,7 @@ config FB_MSM_SECONDARY_PANEL_NONE
 endchoice
 
 config FB_MSM_HDMI_ADV7520_PANEL
-	depends on FB_MSM_MDP40
+	depends on FB_MSM_MDP40 && FB_MSM_OVERLAY
         bool "LCDC HDMI ADV7520 720p Panel"
         select FB_MSM_DTV
 	default n
