msm: rpc: enable rpc router for 8660.
enable rpc router/ ping mdm and oem rapi clients for 8660.

Change-Id: I9728e3ecb91a2f557bf289ddc70727e36b77ac86
Signed-off-by: Niranjana Vishwanathapura <nvishwan@codeaurora.org>

--- a/arch/arm/configs/msm8660_defconfig
+++ b/arch/arm/configs/msm8660_defconfig
@@ -252,7 +252,10 @@ CONFIG_MSM_N_WAY_SMSM=y
 CONFIG_MSM_SMD_TTY=y
 # CONFIG_MSM_SMD_QMI is not set
 CONFIG_MSM_SMD_PKT=y
-# CONFIG_MSM_ONCRPCROUTER is not set
+CONFIG_MSM_ONCRPCROUTER=y
+CONFIG_MSM_ONCRPCROUTER_DEBUG=y
+CONFIG_MSM_RPC_OEM_RAPI=y
+CONFIG_MSM_RPC_PING=y
 # CONFIG_MSM_HW3D is not set
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
 CONFIG_MSM_DMA_TEST=y
