defconfig: 7x30: Enable native PMIC8058 leds driver
Enable native PMIC8058 leds driver and disable remote
leds driver for 7x30.

Change-Id: Ia1c27fffb43e56a6c3802bef9113dee0cf9cc7de
Signed-off-by: Trilok Soni <tsoni@qualcomm.com>

--- a/arch/arm/configs/msm7630-perf_defconfig
+++ b/arch/arm/configs/msm7630-perf_defconfig
@@ -1675,8 +1675,8 @@ CONFIG_LEDS_CPLD=y
 # CONFIG_LEDS_PCA955X is not set
 # CONFIG_LEDS_DAC124S085 is not set
 # CONFIG_LEDS_BD2802 is not set
-CONFIG_LEDS_MSM_PMIC=y
-# CONFIG_LEDS_PMIC8058 is not set
+# CONFIG_LEDS_MSM_PMIC is not set
+CONFIG_LEDS_PMIC8058=y
 
 #
 # LED Triggers
