--- a/arch/arm/configs/msm7630_defconfig
+++ b/arch/arm/configs/msm7630_defconfig
@@ -1234,6 +1234,7 @@ CONFIG_MARIMBA_CODEC=y
 # Graphics support
 #
 CONFIG_MSM_KGSL=y
+CONFIG_MSM_KGSL_2D=y
 CONFIG_MSM_KGSL_MMU=y
 # CONFIG_KGSL_PER_PROCESS_PAGE_TABLE is not set
 # CONFIG_MSM_KGSL_MMU_PAGE_FAULT is not set
