--- a/arch/arm/configs/msm8655-sr_defconfig
+++ b/arch/arm/configs/msm8655-sr_defconfig
@@ -1237,6 +1237,7 @@ CONFIG_RADIO_TAVARUA=y
 # Graphics support
 #
 CONFIG_MSM_KGSL=y
+CONFIG_MSM_KGSL_2D=y
 CONFIG_MSM_KGSL_MMU=y
 # CONFIG_KGSL_PER_PROCESS_PAGE_TABLE is not set
 # CONFIG_MSM_KGSL_MMU_PAGE_FAULT is not set
