msm: board-msm8x60: Add board support for regulators
Add pmic8058 and pmic8901 regulator subdevices and platform data for
msm8x60 SURF and FFA.

Change-Id: I2056cba922c751438a15d14de7b38e708c869bb3
Signed-off-by: Bobby Crabtree <bobbyc@codeaurora.org>

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -47,6 +47,7 @@ config ARCH_MSM8X60
 	select MSM_REMOTE_SPINLOCK_LDREX
 	select ARCH_REQUIRE_GPIOLIB
 	select MSM_ADM3
+	select REGULATOR
 
 endchoice
 
