rtc: rtc-pm8058: Add support for PM8058 based RTC
The Real Time Clock (RTC) is a 1 Hz clock present inside
PMIC8058. The RTC hardware supports alarms, which can be
used to wake up the system from a state of deep sleep.

The driver currently supports read time and set alarm
functionality.

Change-Id: I356643eed8f2241edd40318d0f5ee3c033f2413d
Signed-off-by: Anirudh Ghayal <aghayal@qualcomm.com>

--- a/drivers/rtc/Kconfig
+++ b/drivers/rtc/Kconfig
@@ -876,4 +876,14 @@ config RTC_DRV_PCAP
 	  If you say Y here you will get support for the RTC found on
 	  the PCAP2 ASIC used on some Motorola phones.
 
+config RTC_PM8058
+	tristate "PMIC8058 RTC support"
+	default n
+	depends on PMIC8058
+	help
+	  Say Y here if you want support for the PMIC8058 RTC.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called pmic8058-rtc.
+
 endif # RTC_CLASS
