defconfig: automatic update
Change-Id: Iaca15c2a55daee2568d10892b847e632338f0d29
Signed-off-by: Steve Muckle <smuckle@codeaurora.org>

--- a/arch/arm/configs/msm7627_defconfig
+++ b/arch/arm/configs/msm7627_defconfig
@@ -844,6 +844,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_TSC2007 is not set
 CONFIG_TOUCHSCREEN_MSM_LEGACY=y
 CONFIG_ANDROID_TOUCHSCREEN_MSM_HACKS=y
+# CONFIG_TOUCHSCREEN_CY8CTMA300 is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_ATI_REMOTE is not set
 # CONFIG_INPUT_ATI_REMOTE2 is not set
