--- a/arch/arm/configs/msm8660_defconfig
+++ b/arch/arm/configs/msm8660_defconfig
@@ -254,8 +254,12 @@ CONFIG_MSM_SMD_TTY=y
 CONFIG_MSM_SMD_PKT=y
 CONFIG_MSM_ONCRPCROUTER=y
 CONFIG_MSM_ONCRPCROUTER_DEBUG=y
-CONFIG_MSM_RPC_OEM_RAPI=y
+# CONFIG_MSM_RPC_LOOPBACK_XPRT is not set
+CONFIG_MSM_RPCSERVER_WATCHDOG=y
 CONFIG_MSM_RPC_PING=y
+CONFIG_MSM_RPC_OEM_RAPI=y
+CONFIG_MSM_RPCSERVER_HANDSET=y
+# CONFIG_MSM_RMT_STORAGE_CLIENT is not set
 # CONFIG_MSM_HW3D is not set
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
 CONFIG_MSM_DMA_TEST=y
@@ -783,6 +787,7 @@ CONFIG_GPIO_SYSFS=y
 #
 # Memory mapped GPIO expanders:
 #
+# CONFIG_GPIO_MSM7200A is not set
 
 #
 # I2C GPIO expanders:
@@ -909,7 +914,18 @@ CONFIG_PMIC8901=y
 # CONFIG_MFD_WM8350_I2C is not set
 # CONFIG_MFD_PCF50633 is not set
 # CONFIG_AB3100_CORE is not set
-# CONFIG_REGULATOR is not set
+CONFIG_REGULATOR=y
+# CONFIG_REGULATOR_DEBUG is not set
+# CONFIG_REGULATOR_FIXED_VOLTAGE is not set
+# CONFIG_REGULATOR_VIRTUAL_CONSUMER is not set
+# CONFIG_REGULATOR_USERSPACE_CONSUMER is not set
+# CONFIG_REGULATOR_BQ24022 is not set
+# CONFIG_REGULATOR_MAX1586 is not set
+# CONFIG_REGULATOR_LP3971 is not set
+# CONFIG_REGULATOR_TPS65023 is not set
+# CONFIG_REGULATOR_TPS6507X is not set
+CONFIG_REGULATOR_PMIC8058=y
+CONFIG_REGULATOR_PMIC8901=y
 # CONFIG_MEDIA_SUPPORT is not set
 
 #
@@ -1168,6 +1184,7 @@ CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION_POLYNOMIAL=0x11d
 CONFIG_ANDROID_TIMED_OUTPUT=y
 # CONFIG_ANDROID_TIMED_GPIO is not set
 # CONFIG_ANDROID_LOW_MEMORY_KILLER is not set
+CONFIG_MSM_RPCSERVERS=y
 
 #
 # Qualcomm MSM Camera And Video
