--- a/arch/arm/configs/msm7630_defconfig
+++ b/arch/arm/configs/msm7630_defconfig
@@ -537,6 +537,7 @@ CONFIG_ANDROID_PARANOID_NETWORK=y
 # CONFIG_PHONET is not set
 # CONFIG_IEEE802154 is not set
 CONFIG_NET_SCHED=y
+
 #
 # Queueing/Scheduling
 #
@@ -580,7 +581,6 @@ CONFIG_NET_CLS_ACT=y
 # CONFIG_NET_ACT_POLICE is not set
 # CONFIG_NET_ACT_GACT is not set
 # CONFIG_NET_ACT_MIRRED is not set
-# CONFIG_NET_ACT_IPT is not set
 # CONFIG_NET_ACT_NAT is not set
 # CONFIG_NET_ACT_PEDIT is not set
 # CONFIG_NET_ACT_SIMP is not set
@@ -830,6 +830,7 @@ CONFIG_SCSI_LOWLEVEL=y
 # CONFIG_ATA is not set
 # CONFIG_MD is not set
 CONFIG_NETDEVICES=y
+# CONFIG_IFB is not set
 CONFIG_DUMMY=y
 # CONFIG_BONDING is not set
 # CONFIG_MACVLAN is not set
@@ -947,6 +948,7 @@ CONFIG_INPUT_KEYBOARD=y
 # CONFIG_KEYBOARD_STOWAWAY is not set
 # CONFIG_KEYBOARD_SUNKBD is not set
 # CONFIG_KEYBOARD_XTKBD is not set
+# CONFIG_KEYBOARD_QCIKBD is not set
 # CONFIG_KEYBOARD_I2C_MSM is not set
 CONFIG_KEYBOARD_PMIC8058=y
 # CONFIG_INPUT_MOUSE is not set
@@ -977,6 +979,7 @@ CONFIG_TOUCHSCREEN_MSM=y
 # CONFIG_TOUCHSCREEN_USB_COMPOSITE is not set
 # CONFIG_TOUCHSCREEN_TOUCHIT213 is not set
 # CONFIG_TOUCHSCREEN_TSC2007 is not set
+# CONFIG_TOUCHSCREEN_CY8CTMA300 is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_ATI_REMOTE is not set
 # CONFIG_INPUT_ATI_REMOTE2 is not set
@@ -1124,7 +1127,6 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_BATTERY_MAX17040 is not set
 CONFIG_BATTERY_MSM=y
 # CONFIG_BATTERY_MSM_FAKE is not set
-# CONFIG_HWMON is not set
 CONFIG_HWMON=y
 # CONFIG_HWMON_VID is not set
 # CONFIG_HWMON_DEBUG_CHIP is not set
