--- a/arch/arm/configs/qsd8650_defconfig
+++ b/arch/arm/configs/qsd8650_defconfig
@@ -861,6 +861,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_TSC2007 is not set
 CONFIG_TOUCHSCREEN_MSM_LEGACY=y
 CONFIG_ANDROID_TOUCHSCREEN_MSM_HACKS=y
+# CONFIG_TOUCHSCREEN_CY8CTMA300 is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_ATI_REMOTE is not set
 # CONFIG_INPUT_ATI_REMOTE2 is not set
@@ -1502,6 +1503,7 @@ CONFIG_RTC_INTF_ALARM_DEV=y
 #
 CONFIG_RTC_DRV_MSM=y
 CONFIG_RTC_SECURE_TIME_SUPPORT=y
+# CONFIG_RTC_ASYNC_MODEM_SUPPORT is not set
 # CONFIG_RTC_DRV_MSM7X00A is not set
 # CONFIG_DMADEVICES is not set
 # CONFIG_AUXDISPLAY is not set
