--- a/arch/arm/configs/qsd8650a_defconfig
+++ b/arch/arm/configs/qsd8650a_defconfig
@@ -1284,6 +1284,7 @@ CONFIG_MMC_BLOCK=y
 # CONFIG_MMC_SDHCI is not set
 # CONFIG_MMC_AT91 is not set
 # CONFIG_MMC_ATMELMCI is not set
+# CONFIG_MMC_SPI is not set
 CONFIG_MMC_MSM=y
 CONFIG_MMC_MSM_SDIO_SUPPORT=y
 # CONFIG_MMC_MSM_CARD_HW_DETECTION is not set
@@ -1389,6 +1390,7 @@ CONFIG_RTC_INTF_ALARM_DEV=y
 #
 CONFIG_RTC_DRV_MSM=y
 CONFIG_RTC_SECURE_TIME_SUPPORT=y
+# CONFIG_RTC_ASYNC_MODEM_SUPPORT is not set
 # CONFIG_RTC_DRV_MSM7X00A is not set
 # CONFIG_DMADEVICES is not set
 # CONFIG_AUXDISPLAY is not set
