--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -582,18 +582,18 @@ config TOUCHSCREEN_PCAP
 	  To compile this driver as a module, choose M here: the
 	  module will be called pcap_ts.
 
-config TOUCHSCREEN_CY8CTMA300
-	tristate "Cypress TMA300 based touchscreens"
+config TOUCHSCREEN_CY8C_TS
+	tristate "Cypress TMA300-TMG200 based touchscreens"
 	depends on I2C
 	default n
 	help
-	  Say Y here if you have a Cypress TMA300 based touchscreen.
+	  Say Y here if you have a Cypress TMA300/TMG200 based touchscreen.
 	  TMA300 is a multi-touch screen which can report upto 10
-	  touches at a time.
+	  touches at a time. TMG200 supports 2 touches.
 
 	  If unsure, say N.
 
 	  To compile this driver as a module, choose M here: the
-	  module will be called cy8ctma300.
+	  module will be called cy8c_ts.
 
 endif
