msm: adsp: 7k: Add option to configure adsp driver based on revision
There are two revisions of adsp driver on apps and modem side based on
different RPC versions. If there is any incompatiblity between these
versions (i.e. older revision modem and newer revision apps or newer
revision modem and older revision apps), audio and video playback will
fail completely. MSM7201A architecture shall use older modem revision
and newer apps revision

Hence configure adsp driver based on modem revision and target config
options. Also provide config option to easily switch between the two
revisions of adsp driver

Change-Id: I69fa25a3ed3da087d57421e9eeee6b09a7178963
Signed-off-by: Suresh Vankadara <svankada@qualcomm.com>
Signed-off-by: Sriranjan Srikantam <c_ssrika@qualcomm.com>

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -858,6 +858,25 @@ config MSM_ADSP
 	help
 	  Provides access to registers needed by the userspace aDSP library.
 
+config ADSP_RPC_VER
+	hex
+	default 0x30002 if (ARCH_MSM7X27 || (ARCH_MSM7X25 && AMSS_7X25_VERSION_2009))
+	default 0x30001 if (ARCH_MSM7X01A || (ARCH_MSM7X25 && AMSS_7X25_VERSION_2008))
+	depends on MSM_ADSP
+	help
+	 Select proper ADSP RPC version
+choice
+	prompt "ADSP RPC version"
+
+	default AMSS_7X25_VERSION_2009
+
+	config AMSS_7X25_VERSION_2009
+		bool "2.0.09"
+
+	config AMSS_7X25_VERSION_2008
+		bool "2.0.08"
+endchoice
+
 config MSM7KV2_AUDIO
 	bool "MSM7K v2 audio"
 	depends on (ARCH_MSM7X30 && ANDROID_PMEM)
